// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`imports > should lint 'import/consistent-type-specifier-style' 1`] = `
[
  {
    "column": 13,
    "line": 10,
    "message": "A type-only import can specify a default import or named bindings, but not both.",
    "rule": "TS(1363)",
    "severity": "error",
  },
]
`;

exports[`imports > should lint 'import/export' 1`] = `
[
  {
    "column": 1,
    "line": 3,
    "message": "Exporting mutable 'let' binding, use 'const' instead.",
    "rule": "import(no-mutable-exports)",
    "severity": "error",
  },
  {
    "column": 1,
    "line": 5,
    "message": "Missing file extension in export declaration.",
    "rule": "import(extensions)",
    "severity": "error",
  },
]
`;

exports[`imports > should lint 'import/extensions' 1`] = `[]`;

exports[`imports > should lint 'import/first' 1`] = `
[
  {
    "column": 1,
    "line": 3,
    "message": "Missing file extension in import declaration.",
    "rule": "import(extensions)",
    "severity": "error",
  },
  {
    "column": 1,
    "line": 3,
    "message": "Expected 1 empty line after import statement not followed by another import.",
    "rule": "import(newline-after-import)",
    "severity": "warning",
  },
  {
    "column": 1,
    "line": 5,
    "message": "Missing file extension in import declaration.",
    "rule": "import(extensions)",
    "severity": "error",
  },
  {
    "column": 1,
    "line": 5,
    "message": "Import statements must come first",
    "rule": "import(first)",
    "severity": "warning",
  },
]
`;

exports[`imports > should lint 'import/newline-after-import' 1`] = `[]`;

exports[`imports > should lint 'import/no-absolute-path' 1`] = `[]`;

exports[`imports > should lint 'import/no-amd' 1`] = `
[
  {
    "column": 1,
    "line": 3,
    "message": "Do not use AMD \`require\` and \`define\` calls.",
    "rule": "import(no-amd)",
    "severity": "error",
  },
]
`;

exports[`imports > should lint 'import/no-commonjs' 1`] = `
[
  {
    "column": 11,
    "line": 3,
    "message": "Expected import instead of require",
    "rule": "import(no-commonjs)",
    "severity": "error",
  },
  {
    "column": 16,
    "line": 5,
    "message": "Expected export instead of exports",
    "rule": "import(no-commonjs)",
    "severity": "error",
  },
  {
    "column": 16,
    "line": 5,
    "message": "Expected export instead of exports",
    "rule": "import(no-commonjs)",
    "severity": "error",
  },
  {
    "column": 1,
    "line": 7,
    "message": "Expected export instead of sayHello",
    "rule": "import(no-commonjs)",
    "severity": "error",
  },
  {
    "column": 1,
    "line": 11,
    "message": "Expected export instead of exports",
    "rule": "import(no-commonjs)",
    "severity": "error",
  },
]
`;

exports[`imports > should lint 'import/no-cycle' 1`] = `
[
  {
    "column": 1,
    "line": 4,
    "message": "Expected 1 empty line after import statement not followed by another import.",
    "rule": "import(newline-after-import)",
    "severity": "warning",
  },
  {
    "column": 1,
    "line": 8,
    "message": "Import statements must come first",
    "rule": "import(first)",
    "severity": "warning",
  },
  {
    "column": 1,
    "line": 8,
    "message": "Expected 1 empty line after import statement not followed by another import.",
    "rule": "import(newline-after-import)",
    "severity": "warning",
  },
]
`;

exports[`imports > should lint 'import/no-duplicates' 1`] = `
[
  {
    "column": 1,
    "line": 3,
    "message": "Missing file extension in import declaration.",
    "rule": "import(extensions)",
    "severity": "error",
  },
  {
    "column": 21,
    "line": 3,
    "message": "Module './module' is imported more than once in this file",
    "rule": "import(no-duplicates)",
    "severity": "error",
  },
  {
    "column": 1,
    "line": 4,
    "message": "Missing file extension in import declaration.",
    "rule": "import(extensions)",
    "severity": "error",
  },
  {
    "column": 1,
    "line": 6,
    "message": "Missing file extension in import declaration.",
    "rule": "import(extensions)",
    "severity": "error",
  },
  {
    "column": 1,
    "line": 7,
    "message": "Missing file extension in import declaration.",
    "rule": "import(extensions)",
    "severity": "error",
  },
]
`;

exports[`imports > should lint 'import/no-empty-named-blocks' 1`] = `
[
  {
    "column": 1,
    "line": 3,
    "message": "Unexpected empty named \`import\` block.",
    "rule": "import(no-empty-named-blocks)",
    "severity": "error",
  },
  {
    "column": 16,
    "line": 3,
    "message": "Module 'mod' is imported more than once in this file",
    "rule": "import(no-duplicates)",
    "severity": "error",
  },
  {
    "column": 1,
    "line": 4,
    "message": "Unexpected empty named \`import\` block.",
    "rule": "import(no-empty-named-blocks)",
    "severity": "error",
  },
]
`;

exports[`imports > should lint 'import/no-mutable-exports' 1`] = `[]`;

exports[`imports > should lint 'import/no-named-as-default' 1`] = `[]`;

exports[`imports > should lint 'import/no-named-as-default-member' 1`] = `
[
  {
    "column": 1,
    "line": 4,
    "message": "Missing file extension in import declaration.",
    "rule": "import(extensions)",
    "severity": "error",
  },
  {
    "column": 1,
    "line": 4,
    "message": "Expected 1 empty line after import statement not followed by another import.",
    "rule": "import(newline-after-import)",
    "severity": "warning",
  },
]
`;

exports[`imports > should lint 'import/no-named-default' 1`] = `[]`;

exports[`imports > should lint 'import/no-self-import' 1`] = `
[
  {
    "column": 1,
    "line": 4,
    "message": "Expected 1 empty line after import statement not followed by another import.",
    "rule": "import(newline-after-import)",
    "severity": "warning",
  },
  {
    "column": 13,
    "line": 5,
    "message": "Missing file extension in import declaration.",
    "rule": "import(extensions)",
    "severity": "error",
  },
  {
    "column": 13,
    "line": 5,
    "message": "Expected import instead of require",
    "rule": "import(no-commonjs)",
    "severity": "error",
  },
]
`;
